<resources>
	<string name="app_name">OneFeed</string>
	<string name="feed_menu_authorize_twitter">Authorize Twitter</string>
	<string name="feed_empty_state">There are no posts to show.</string>
	<string name="feed_menu_reset_authorizations">Reset authorizations</string>
	<string name="feed_plugin_error_title">Something went wrong with plugin</string>
	<string name="feed_rate_limit_error_message">%1$s plugin exceeded rate limit.</string>
	<string name="unexpected_error_title">Unexpected error occurred 🌚</string>
	<string name="got_it">Got it</string>
	<string name="bullet" translatable="false">•</string>
	<string name="plugin_authorization_not_supported">This authorization method is not supported</string>
	<string name="plugin_authorization_loading_plugin">Loading plugin</string>
	<string name="plugin_authorization_screen_title">Authorize</string>
	<string name="plugin_authorization_screen_title_with_name">Authorize %1$s</string>
	<string name="plugin_authorization_ouath_connecting">Connecting with %1$s</string>
	<string name="initial_setup_welcome">Welcome!</string>
	<string name="initial_setup_description">Choose and connect social medias which you want.</string>
	<string name="skip">Skip</string>
	<string name="general_continue">Continue</string>
	<string name="general_sign_in">Sign in</string>
	<string name="auth_email">Email</string>
	<string name="auth_password">Password</string>
	<string name="authorize_instagram">Authorize Instagram</string>
	<string name="please_wait">Please, wait</string>
    <string name="choose_apk">Choose APK</string>
    <string name="choose_apk_description">Use custom social media extensions</string>
    <string name="add_a_comment_hint">Add a comment</string>
	<string name="feed_side_menu_liked">Liked</string>
	<string name="feed_side_menu_settings">Settings</string>
	<string name="liked_title">Liked</string>
	<string name="account_log_out_confirm">Do you want log out this account?</string>
	<string name="accounts_title">Accounts</string>
	<string name="settings_app_theme">App theme</string>
	<string name="settings_title">Settings</string>
	<string-array name="themes">
		<item>Light</item>
		<item>Dark</item>
	</string-array>
</resources>
