<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="com.ivansadovyi.onefeed.presentation.screens.initialSetup.InitialSetupViewModel" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingLeft="16dp"
        android:paddingTop="32dp"
        android:paddingEnd="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/initial_setup_welcome"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/initial_setup_description"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="?android:textColorSecondary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:onClick="onChooseFacebook"
            android:orientation="horizontal"
            android:paddingTop="16dp"
            android:paddingBottom="16dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_facebook"
                app:tint="#3c5a95" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:text="Facebook"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

            <View
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="0dp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                app:visible="@{viewModel.facebookChoosed}"
                app:srcCompat="@drawable/ic_check_black_24dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:onClick="onChooseInstagram"
            android:orientation="horizontal"
            android:paddingTop="16dp"
            android:paddingBottom="16dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_instagram"
                app:tint="#e5004b" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:text="Instagram"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

            <View
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="0dp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                app:visible="@{viewModel.instagramChoosed}"
                app:srcCompat="@drawable/ic_check_black_24dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:onClick="onChooseTwitter"
            android:orientation="horizontal"
            android:paddingTop="16dp"
            android:paddingBottom="16dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                app:srcCompat="@drawable/ic_twitter"
                app:tint="@color/colorTwitter" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:text="Twitter"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

            <View
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="0dp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                app:visible="@{viewModel.twitterChoosed}"
                app:srcCompat="@drawable/ic_check_black_24dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onSkipClick"
                android:text="@string/skip"
                android:textAllCaps="false" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="@{viewModel.continueEnabled}"
                android:onClick="onSkipClick"
                android:text="@string/general_continue"
                android:textAllCaps="false" />
        </LinearLayout>
    </LinearLayout>
</layout>